@@ -1,6 +1,8 @@
 2019-04-18         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* Makefile.am (EXTRA_DIST): Add ChangeLog.1 to the list. Ooops.
+	(synerr3): New test.
+	* synerr3.awk, synerr3.ok: New files.
 
 2019-04-12         Arnold D. Robbins     <arnold@skeeve.com>
 
